--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -216,7 +216,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/provod_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="highvoltagewire/" class="overlay">
                             <img src="{% static 'images/catalog/provod_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -232,7 +232,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/gas_stops_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="gasstop/" class="overlay">
                             <img src="{% static 'images/catalog/gas_stops_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -248,7 +248,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/balljoint_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="balljoint/" class="overlay">
                             <img src="{% static 'images/catalog/balljoint_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -264,7 +264,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/patrub_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="branchpipe/" class="overlay">
                             <img src="{% static 'images/catalog/patrub_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -280,7 +280,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/controlarm_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="/" class="overlay">
                             <img src="{% static 'images/catalog/controlarm_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -296,7 +296,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/nerzav_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="stainlessconnections/" class="overlay">
                             <img src="{% static 'images/catalog/nerzav_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -312,7 +312,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/pruguna_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="suspensionspring/" class="overlay">
                             <img src="{% static 'images/catalog/pruguna_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -328,7 +328,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/starter_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="starter/" class="overlay">
                             <img src="{% static 'images/catalog/starter_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -344,7 +344,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/stoyka_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="pillarstabilizer/" class="overlay">
                             <img src="{% static 'images/catalog/stoyka_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -360,7 +360,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/cylinder_1.png' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="cylinder/" class="overlay">
                             <img src="{% static 'images/catalog/cylinder_1.png' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -376,7 +376,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/bracket_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="/" class="overlay">
                             <img src="{% static 'images/catalog/bracket_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -392,7 +392,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/rubberbushing_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="/" class="overlay">
                             <img src="{% static 'images/catalog/rubberbushing_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -408,7 +408,7 @@
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this"
                          data-src="{% static 'images/catalog/steeringtip_1.jpg' %}">
-                        <a href="belt/" class="overlay">
+                        <a href="/" class="overlay">
                             <img src="{% static 'images/catalog/steeringtip_1.jpg' %}">
                             <div class="item-text">
                                 <span class="folio-types">HORT PARTS</span>
@@ -583,14 +583,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="highvoltagewire/">
                         <img class="card-img-top" src="{% static 'images/download/provod_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/hightvoltahewire_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -598,14 +598,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="gasstop/">
                         <img class="card-img-top" src="{% static 'images/download/gas_stop_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'GAS SPRINGS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/gasstop_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -613,14 +613,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="balljoint/">
                         <img class="card-img-top" src="{% static 'images/download/balljoint_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BALL JOINTS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/balljoint_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -628,14 +628,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="branchpipe/">
                         <img class="card-img-top" src="{% static 'images/download/patrubki_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BRANCH PIPES' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/branchpipes_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -650,7 +650,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/controarm_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -658,14 +658,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="stainlessconnections/">
                         <img class="card-img-top" src="{% static 'images/download/nerzav_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STAINLESS STEEL FITTINGS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/stainlessconnections_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -673,14 +673,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="suspensionspring/">
                         <img class="card-img-top" src="{% static 'images/download/pruguna_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'SUSPENSION SPRINGS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/suspensionspring_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -688,14 +688,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="starter/">
                         <img class="card-img-top" src="{% static 'images/download/starter_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STARTERS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/starters_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -703,14 +703,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="pillarstabilizer/">
                         <img class="card-img-top" src="{% static 'images/download/stoyka_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STABILIZER STANDS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/pillarstabilizer_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -718,14 +718,14 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="/">
+                    <a href="cylinder/">
                         <img class="card-img-top" src="{% static 'images/download/cylinder_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/cylinder_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -740,7 +740,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/bracket_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -755,7 +755,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/rubberbushing_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -770,7 +770,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/steepingtip_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
