--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -108,6 +108,201 @@
                 </div>
             </div>
 
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/belt_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BELT' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/belt_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/provod_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/hightvoltahewire_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/gas_stop_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'GAS SPRINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/gasstop_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/balljoint_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BALL JOINTS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/balljoint_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/patrubki_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BRANCH PIPES' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/branchpipes_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/controlarm_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'CONTROL ARMS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/controarm_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/nerzav_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STAINLESS STEEL FITTINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/stainlessconnections_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/pruguna_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'SUSPENSION SPRINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/suspensionspring_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/starter_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STARTERS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/starters_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/stoyka_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STABILIZER STANDS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/pillarstabilizer_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/cylinder_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/cylinder_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/bracket_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BRACKET' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/bracket_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/rubberbushing_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'RUBBER BUSHINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/rubberbushing_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <img class="card-img-top" src="{% static 'images/download/steeringtip_500.jpg' %}">
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STEERING TIPS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="{% static 'photos/download/steepingtip_hort.rar' %}"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
