--- a/hort_parts/templates/hort_parts/include/footer.html
+++ b/hort_parts/templates/hort_parts/include/footer.html
@@ -23,7 +23,7 @@
                 <h4 class="h05">{% trans 'Products' %}.</h4>
 
                 <ul class="list-links">
-                    <li><a href="shockabsorber/">Shock absorbers</a></li>
+                    <li><a href="shockabsorber/">{% trans 'Shock absorbers' %}</a></li>
                     <li><a href="#">Instagram</a></li>
                 </ul>
 
@@ -34,7 +34,7 @@
                 <h4 class="h05">{% trans 'Products' %}.</h4>
 
                 <ul class="list-links">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">{% trans 'About Us' %}</a></li>
                     <li><a href="#">Instagram</a></li>
                 </ul>
 
