--- a/hort_parts/templates/hort_parts/product/footer.html
+++ b/hort_parts/templates/hort_parts/product/footer.html
@@ -7,23 +7,23 @@
             <div class="footer-top">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
-                        <h4 class="h4">Catalog</h4>
+                        <h4 class="h4">{% trans 'Catalog' %}</h4>
                         <ul>
-                            <li><a href="#">Shock Absorber</a></li>
+                            <li><a href="#">{% trans 'Shock Absorber' %}</a></li>
 
                         </ul>
                     </div>
                     <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
-                        <h4 class="h4">Informations</h4>
+                        <h4 class="h4">{% trans 'Informations' %}</h4>
                         <ul>
-                            <li><a href="#">About us</a></li>
+                            <li><a href="#">{% trans 'About Us' %}</a></li>
 
                         </ul>
                     </div>
                     <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
-                        <h4 class="h4">Customer Services</h4>
+                        <h4 class="h4">{% trans 'Customer Services' %}</h4>
                         <ul>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">{% trans 'Contact' %}</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-sm-12 col-md-3 col-lg-3 contact-box">
